<resources>
    <string name="app_name">Fire Load Game</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_which_one">Choose which one</string>
    <string name="rock">Rock</string>
    <string name="paper">Paper</string>
    <string name="scissors">Scissors</string>
    <string name="you">You</string>
    <string name="computer_0">Computer: 0</string>
    <string name="player_0">Player: 0</string>
    <string name="computer">Computer</string>
    <string name="please_wait">Please wait...</string>
    <string name="third_game">Third Game</string>
    <string name="second_game">Second Game</string>
</resources>